--- a/worker-subreport.jrxml
+++ b/worker-subreport.jrxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.0.1.final using JasperReports Library version 6.0.0  -->
-<!-- 2015-11-16T11:54:39 -->
+<!-- 2015-11-16T17:41:08 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="worker-subreport" pageWidth="268" pageHeight="842" columnWidth="268" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="feb73353-958d-4aad-86e1-53b882705518">
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="xml_local"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false"/>
 	<queryString language="xPath">
 		<![CDATA[/log/data/worker]]>
 	</queryString>
